# CIDemoApp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ADFS/dataflow/: MergeFAA.json
ADFS/dataset/: DestinationDataset_Weather.json  FAAMasterFile_DF.json  HTTP_Weather.json  Source_MasterFile.json  Storage_Staging_FAA.json
ADFS/integrationRuntime/: ADFLab-SSIS.json
ADFS/linkedService/: AzureBlobStorage_Source.json  HdCluster_LS.json  HttpWeather.json  SSISDB Azure Endpoint.json  SourcesStorage_DF.json  Storage_Staging.json
ADFS/pipeline/: BlobtoBlobCopyActivity.json  SSISLiftAndShift.json  Weather to Blob Copy.json
ADFS/templates/MergeFAAFiles/: MergeFAAFiles.json  manifest.json
ADFS/trigger/: SSISLiftandShitTrigger.json
adflab-AIS/PartialArmTemplates/: ArmTemplate_5_23_2019_20_35_37.json  ArmTemplate_5_23_2019_20_39_20.json
agents/: __init__.py  base.py  coordinator.py  models.py
agents/industry_specific/: __init__.py  banking_agent.py  energy_agent.py  government_agent.py  insurance_agent.py
agents/supporting/: __init__.py  enrichment_agent.py  timing_agent.py  validation_agent.py
config/: __init__.py  settings.py
deployment/azure/: deploy.bicep
deployment/docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  QUICKSTART.md
orchestration/: __init__.py  main.py  storage.py  workflow.py
tests/: __init__.py  test_agents.py  test_integration.py
tools/: __init__.py  base_tool.py  clearbit.py  fdic_api.py  hunter_io.py  sam_gov_api.py  web_search.py
